--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="container">
         <h1>
@@ -19,6 +21,18 @@
         </div>
     </div>
 
+    <div class="contenedor-imagenes" id="contenedor-imagenes">
+        <img class="imagen-actual" src="" id="imagen" alt="Imagen">
+    </div>
+    
+    <div>
+        <p class="contenedorHora">
+
+        </p>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
