--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -18,6 +18,7 @@
                     <th>Cantidad de mixes pedidos</th>
                     <th>Números de mixes</th>
                     <th>Valor total del pedido</th>
+                    <th>Whatsapp</th>
                 </tr>
             </thead>
             <tbody class="content">
@@ -27,7 +28,7 @@
             <button class="btnCleaner">LIMPIAR PEDIDOS</button>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/main.js"></script>
 </body>
 
