--- a/pages/form.html
+++ b/pages/form.html
@@ -38,7 +38,7 @@
         
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/main.js"></script>
   
 </body>
