--- a/pages/inventario.html
+++ b/pages/inventario.html
@@ -169,6 +169,7 @@
             </table>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/main.js"></script>
 </body>
 </html>
